<resources>
    <string name="app_name">ClothShop</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>

    <!-- Form -->
    <string name="email_address">Email Address</string>
    <string name="email_hint">Enter your email here</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>

    <!-- Actions -->
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Don’t have an account? Sign up</string>


    <!-- Accessibility -->
    <string name="login_header_image_desc">Login background image</string>
</resources>
